[package]
name = "lunatic-log"
version = "0.3.0"
edition = "2021"
description = "A logging library for lunatic Rust applications"
repository = "https://github.com/lunatic-solutions/logger-rs"
categories = ["wasm", "development-tools::debugging"]
license = "Apache-2.0/MIT"
readme = "Readme.md"

[dependencies]
lunatic-tracing-core = { path = "./lunatic-tracing-core" }

cfg-if = "1.0.0"
lunatic = { version = "0.12", features = ["json_serializer"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]

[workspace]
members = ["lunatic-tracing-core"]
