[package]
name = "lunatic-log"
version = "0.3.0"
edition = "2021"
description = "A logging library for lunatic Rust applications"
repository = "https://github.com/lunatic-solutions/logger-rs"
categories = ["wasm", "development-tools::debugging"]
license = "Apache-2.0/MIT"
readme = "Readme.md"

[dependencies]
cfg-if = "1.0.0"
lunatic = { version = "0.12.1", features = ["json_serializer"] }
lunatic-cached-process = "0.2.2"
lunatic-message-request = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"

ansi_term = { version = "0.12.1", optional = true }
chrono = { version = "0.4.23", optional = true }

[features]
default = ["fmt"]
fmt = ["ansi_term", "chrono"]

max_level_off = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []

release_max_level_off = []
release_max_level_error = []
release_max_level_warn = []
release_max_level_info = []
release_max_level_debug = []
release_max_level_trace = []

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
