[package]
name = "lunatic-log"
version = "0.4.0"
edition = "2021"
description = "A logging library for lunatic Rust applications"
repository = "https://github.com/lunatic-solutions/lunatic-log-rs"
categories = ["wasm", "development-tools::debugging"]
license = "Apache-2.0/MIT"
readme = "Readme.md"

[dependencies]
chrono = "0.4"
lunatic = "0.14"
serde = { version = "1.0", features = ["derive"] }
yansi = "0.5.1"

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
