[package]
name = "lunatic-tracing-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lunatic = { version = "0.12", features = ["json_serializer"] }
lunatic-cached-process = { version = "0.1.1", path = "../../../tqwewe/lunatic-cached-process" }
lunatic-message-request = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
